# dotclock

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: clock.rs  main.rs  options.rs
src/fonts/: am_pm.bdf  main.bdf  mod.rs  num_7x7.bdf
