[package]
name = "dotclock"
version = "0.5.0"
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Command-line tool to show a clock on a Luminator display"
license = "MIT"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["clock", "flip-dot", "Luminator", "bus", "sign"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bdf = "0.6.0"
chrono = "0.4.19"
env_logger = "0.8.3"
flipdot = { git = "https://github.com/alusch/flipdot.git", branch = "automatic_flipping" }
flipdot-testing = { git = "https://github.com/alusch/flipdot.git", branch = "automatic_flipping" }
serial = "0.4.0"
structopt = "0.3.21"
timer = "0.2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
