[package]
name = "dotclock"
version = "0.6.0"
authors = ["Adam Lusch <alusch@gmail.com>"]
description = "Command-line tool to show a clock on a Luminator display"
license = "MIT"
repository = "https://github.com/alusch/flipdot"
readme = "README.md"
keywords = ["clock", "flip-dot", "Luminator", "bus", "sign"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.80"
bdf = "0.6.0"
chrono = "0.4.34"
env_logger = "0.11.2"
flipdot = "0.7.0"
flipdot-testing = "0.7.0"
serial = "0.4.0"
structopt = "0.3.26"
timer = "0.2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
